syntax = "proto3";
import "google/protobuf/empty.proto";

package myPing;

service Ping {
    rpc Health (HealthRequest) returns (HealthReply) {}
    rpc Echo (EchoRequest) returns (EchoReply) {}
    rpc GotoHTTP (GotoHTTPRequest) returns (GotoHTTPReply) {}
    rpc GotoGRPC (GotoGRPCRequest) returns (GotoGRPCReply) {}
    rpc ErrorTest (ErrorTestRequest) returns (ErrorTestReply) {}
    rpc AsyncTest (AsyncTestRequest) returns (AsyncTestReply) {}
}

message HealthRequest {
}

message HealthReply {
    string response = 1;
}

message EchoRequest {
    string message_id = 1;
    string message_body = 2;
}

message EchoReply {
    EchoRequest echo_request = 1;
    string timestr = 2;
    uint64 timestamp = 3;
}

message GotoHTTPRequest {
}

message GotoHTTPReply {
    string response = 1;
}

message GotoGRPCRequest {
}

message GotoGRPCReply {
    string response = 1;
}

message ErrorTestRequest {
}

message ErrorTestReply {
    string response = 1;
}

message AsyncTestRequest {
}

message AsyncTestReply {
    string response = 1;
}